Spring version updated + Kotlin linked